--- a/about.html
+++ b/about.html
@@ -1,28 +1,101 @@
 <!DOCTYPE html>
 <a href="index.html">Home</a>
 <head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 <style>
 
-  body {
-        background-color:#E6E6FA;
-      }
+
+
 </style>
 
-<body>
+
+
+
   <title>About Page</title>
-<h1>Top 10 Anime Characters</h1>
+ <font color="white"><h1>
+<h1>Top 10 Anime Characters</h1><br>
+
+</head>
+
+	<body
+ {
+   background="m.jpg"
+ }>
 <ul>
+ <font color="white"><h4>
   <li>Hagoromo Ōtsutsuki<br></li>
   <li> Itachi Uchiha<br></li>
   <li> Saitama<br></li>
-  <li> Rin Okumura<br></li>
-  <li> Koro Sensei<br></li>
-  <li> Genos<br></li>
-  <li> Eren Yeager<br></li>
+  <li> Gray Fullbuster<br></li>
+  <li> Naruto Uzumaki<br></li>
+  <li> Shisui Uchiha<br></li>
+  <li> Light Yagami<br></li>
   <li> Natsu Dragneel<br></li>
-  <li> Ichigo Kurasaki<br></li>
-  <li> Koko Hekmatyar<br></li>
+  <li> L<br></li>
+  <li> Meliodas<br></li>
+	 </h4></font>
 </ul>
+	 </body>
+	<font color="white"><h4>
+	
+ 
+<details>
+  <summary>Highlights</summary>
+
+
+  <details>
+  <summary> Hagoromo Ōtsutsuki<br></summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/nkyfDXr2u0c" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</details>
+
+
+
+  <details>
+  <summary> Itachi Uchiha<br></summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/4Duu8fNulLo" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </details>
+
+  <details>
+  <summary> Saitama<br></summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Vk6dhati6ZQ" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </details>
+
+
+  <details>
+  <summary> Gray Fullbuster<br></summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/crkGqYMZAc4" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </details>
+
+  <details>
+  <summary> Naruto Uzumaki</summary>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/t5SKiDW-Hbw" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </details>
+
+
+  <details>
+  <summary> Shisui Uchiha</summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/77wEuyCP1f8" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </details>
+
+  <details>
+  <summary> Light Yagami</summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/04tO_HNVF24" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </details>
+
+  <details>
+  <summary> Natsu Dragneel</summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/noXYZPC3iIg" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </details>
+
+  <details>
+  <summary> Phibunsongkhram</summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/QQqyWT6RFbc" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</details>
+
+  <details>
+  <summary> Meliodas</summary>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/TTPh9JQme_k" frameborder="100" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</details>
 
 
 
@@ -36,22 +109,5 @@
 
 
 
+</details>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</head>
-</body>
-</html>
