--- a/contact.html
+++ b/contact.html
@@ -2,28 +2,36 @@
 <a href="index.html">Home</a>
 <html lang="en">
 <head>
+
   <title>Contact Page</title>
 
   <style>
 
-    body {
-          background-color:#8CEFFF;
-        }
-  </style>
 
+  </style>
+<link rel="stylesheet" href="styles.css">
   <meta charset="utf-8">
   <meta name="description" content="This is a website for anime discussions">
   <meta name="keywords" content="Anime, Otaku, Manga, Kawaii">
                 </head>
-  <body>
+  <body
+ {
+   background="asuna.jpg"
+			 
+ }>
 
-                    <header>
-                    <h1 id="mainTitle"> This is my contact page</h1>
+<header>
+  <h1 id="mainTitle"> This is my contact page</h1>
                   </header>
 
-
+<font color="#FD0C50"><h2>
 <hr>
-Contacts: 614-123-4567<br>
-Email: JohnDoe123@aol.com<br>
-Fax: 772-352-1209<br>
+Contacts: 614-260-9210<br>
+Email: khalid02@aol.com<br>
+FaceBook: AnimeKhAlid<br>
+Finstagram: khalid.animeboi<br>
+</h2>
+ </font>
 <hr>
+</body>
+</html>
