--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,10 @@
 
   <title>Contact Page</title>
 
-  <style>
-
-
-  </style>
-<link rel="stylesheet" href="styles.css">
-  <meta charset="utf-8">
-  <meta name="description" content="This is a website for anime discussions">
-  <meta name="keywords" content="Anime, Otaku, Manga, Kawaii">
                 </head>
   <body
  {
-   background="asuna.jpg"
+   background="dons.jpg"
 			 
  }>
 
