--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                                   <p>something here too</p><br>
                                     </font>
 
-<div class="images"><img src="drop the pic addy" width="40%" alt="Itachi"></div>
+<div class="images"><img src="drop the pic addy" width="40%" ></div>
 
 
 
 
-<div class="images"><img src="here too^" width="40%"  alt="Obito"/></div>
+<div class="images"><img src="here too^" width="40%"  alt=/></div>
 
 
 
